Minor changes to writings

--- a/gw2t.css
+++ b/gw2t.css
@@ -950,6 +950,9 @@ header.cntHeader {
 	color: #ff8844 !important;
 	opacity: 0.5;
 }
+.chnEvents li:hover {
+	color: #ffcc77 !important;
+}
 
 /* @@Map layer
 ----------------------------------------------------------------------------- */
