--- a/gw2t.css
+++ b/gw2t.css
@@ -4,7 +4,7 @@
 	Measurements: minimum window size is 360x720, which is only enough for the
 	clock and timers list (all of the right panel).
 	CSS3: uses gradient, text-shadow, box-shadow modules.
-	Version: 2014.06.18 modified - 2014.04.18 created
+	Version: 2014.06.19 modified - 2014.04.18 created
 
 	CREDITS:
 	Game assets and map tiles are copyright 2012 ArenaNet, Inc.
@@ -403,6 +403,58 @@ input#mapCoordinatesRegion {
 #itemTimeServer {
 	right: 10px; bottom: 10px;
 }
+
+#itemLanguage {
+	position: absolute;
+	bottom: 28px;
+	left: 10px;
+	font-family: sans-serif;
+	font-size: 12px;
+	color: #e4e0b3;
+	text-shadow:
+		1px 1px 0px #000,
+		-1px -1px 0px #000,
+		1px -1px 0px #000,
+		-1px 1px 0px #000,
+		1px 1px 0px #000;
+	opacity: 0.9;
+}
+#itemLanguage img {
+	vertical-align: middle;
+	padding-bottom: 2px;
+}
+#itemLanguage abbr {
+	opacity: 0.8;
+}
+#itemLanguageChoices { /* Popup when hovered over language button */
+	display: none;
+}
+#itemLanguageChoices a {
+	display: block;
+	padding-left: 4px;
+	padding-right: 4px;
+	font-size: 14px;
+	line-height: 150%;
+	text-decoration: none;
+	color: white;
+}
+#itemLanguageChoices a:hover {
+	color: #ddff77;
+	background: #364852;
+}
+#itemLanguage:hover {
+	padding-bottom: 4px;
+}
+#itemLanguage:hover #itemLanguageChoices {
+	display: block;
+	position: absolute;
+	padding: 2px;
+	border: 2px solid #111;
+	box-shadow: 0px 0px 2px #555;
+	background: #22323d;
+	background: linear-gradient(to right, #001019 0%, #364852 100%);
+}
+
 #itemSocial {
 	position: absolute;
 	bottom: 28px;
