--- a/gw2t.css
+++ b/gw2t.css
@@ -4,7 +4,7 @@
 	Measurements: minimum window size is 360x720, which is only enough for the
 	clock and timers list (all of the right panel).
 	CSS3: uses gradient, text-shadow, box-shadow modules.
-	Version: 2014.06.24 modified - 2014.04.18 created
+	Version: 2014.06.30 modified - 2014.04.18 created
 
 	CREDITS:
 	Game assets and map tiles are copyright 2012 ArenaNet, Inc.
@@ -142,7 +142,7 @@ a, input, label, button,
 	cursor: url("img/cursor/pointer.png"), pointer;
 }
 
-#itemClockFace img,
+#paneClockIcons img,
 .cntComposition ins, .mapLinks li, .mapLinks dt, .chnDetails ol li span {
 	cursor: url("img/cursor/zoom.png"), zoom-in;
 }
@@ -309,7 +309,7 @@ a#linkModeSimple {
 	opacity: 0;
 }
 
-#itemClockFace {
+#paneClockFace {
 	background: url("img/background/face.png") no-repeat center;
 }
 
@@ -321,12 +321,12 @@ a#linkModeSimple {
 	width: 64px; height: 64px;
 	border-radius: 12px;
 }
-#itemClockFace img {
+#paneClockIcons img {
 	position: absolute;
 	border: 1px solid black;
 	box-shadow: 0px 0px 10px black;
 }
-#itemClockFace img:hover {
+#paneClockIcons img:hover {
 	border: 1px solid red !important;
 	box-shadow: 0px 0px 10px red !important;
 }
@@ -1323,6 +1323,7 @@ paletteText {
 	color: #44dd44; /* Green laurel */
 	color: #009900; /* Green stats */
 	color: #bbcc77; /* Green time */
+	color: #44dd44; /* Green story title */
 	color: #ddff77; /* Green bright chat notice */
 	color: #88ff88; /* Green chat say name */
 	color: #44bbff; /* Blue chat party name */
@@ -1333,6 +1334,8 @@ paletteText {
 }
 
 paletteBackground {
+	color: #d19600; /* Gold experience progress bar */
 	color: #ee7924; /* Orange event progress bar */
+	color: #bfd47a; /* Green event progress bar */
 	color: #e4e0b3; /* Cream menu icons top left corner */
 }
