--- a/gw2t.css
+++ b/gw2t.css
@@ -138,14 +138,14 @@ a, input, label, button,
 #mapCompassButton, #paneMenu span, #itemClockWaypoints img,
 .menuBeam img:hover,
 .jsTableOfContents ol li, .jsSectionDone,
-#layerChains header, .chnCheck:hover, .chnDetailsLinks ins,
+.chnCheck:hover, .chnDetailsLinks ins,
 #listChainsScheduled .chnTitle time,
 .leaflet-clickable {
 	cursor: url("img/cursor/pointer.png"), pointer;
 }
 
 /* Toggleable */
-.chnTitle h1, .jsSection, .jsHelpCollapsible {
+#layerChains header, .chnTitle h1, .jsSection, .jsHelpCollapsible {
 	cursor: url("img/cursor/toggle.png"), pointer;
 }
 
@@ -248,6 +248,20 @@ a#linkModeSimple {
 	margin-top: 4px;
 	border: 1px solid #e4e0b3;
 	border-radius: 8px;
+}
+
+.mapNeedle {
+	font-family: sans-serif;
+	font-size: 12px;
+	text-align: center;
+	background: none;
+	color: white;
+	text-shadow:
+		1px 1px 0px #000,
+		-1px -1px 0px #000,
+		1px -1px 0px #000,
+		-1px 1px 0px #000,
+		1px 1px 0px #000;
 }
 
 
@@ -472,16 +486,13 @@ a#linkModeSimple {
 		1px -1px 0px #000,
 		-1px 1px 0px #000,
 		1px 1px 0px #000;
-	opacity: 0.9;
 }
 #itemLanguage img {
 	vertical-align: middle;
 	padding-bottom: 2px;
+	opacity: 0.9;
 }
-#itemLanguage abbr {
-	opacity: 0.8;
-}
-#itemLanguage:hover abbr {
+#itemLanguage:hover img {
 	opacity: 1;
 }
 #itemLanguageChoices {
@@ -514,6 +525,7 @@ a#linkModeSimple {
 	box-shadow: 0px 0px 2px #555;
 	background: #222;
 	background: linear-gradient(to right, #111 0%, #333 100%);
+	opacity: 0.9;
 }
 
 #itemSocial {
@@ -556,7 +568,7 @@ a#linkModeSimple {
 }
 
 #menuChains {
-	background: url("img/ui/timers.png") no-repeat center;
+	background: url("img/ui/chains.png") no-repeat center;
 }
 #menuMap {
 	background: url("img/ui/map.png") no-repeat center;
@@ -993,7 +1005,7 @@ header.cntHeader {
 	padding-left: 8px;
 	vertical-align: middle;
 }
-.chnTitle h1:hover {
+.chnTitle h1:hover, .barChainDummy h1.chnTitleCurrent:hover {
 	color: #eee;
 }
 
@@ -1049,7 +1061,7 @@ header.cntHeader {
 	background: linear-gradient(to right, #111 0%, #4f280c 100%);
 }
 
-.chnTitleCurrent {
+.chnTitleCurrent, .barChainDummy h1.chnTitleCurrent {
 	color: #ffaa22;
 	opacity: 1;
 }
