--- a/gw2t.css
+++ b/gw2t.css
@@ -58,6 +58,9 @@ html, body {
 	margin-top: 24px;
 	margin-left: 24px;
 }
+#paneWarning {
+	background: #111;
+}
 #jsConsole, #jsConsoleButtons, #paneWarning {
 	font-family: monospace;
 	font-size: 16px;
