--- a/gw2t.css
+++ b/gw2t.css
@@ -1,10 +1,10 @@
 /*
 	Design: "Synchronicity" with Guild Wars 2 assets and motifs.
 	Website: GW2Timer world boss timer and map guide.
-	Measurements: minimum window size is 360x720, which is only enough for the
+	Measurements: minimum window size is 360x580, which is only enough for the
 	clock and timers list (all of the right panel).
 	CSS3: uses gradient, text-shadow, box-shadow modules.
-	Version: 2014.07.04 modified - 2014.04.18 created
+	Version: 2014.07.12 modified - 2014.04.18 created
 
 	CREDITS:
 	Game assets and map tiles are copyright 2012 ArenaNet, Inc.
@@ -50,6 +50,10 @@ body > windowMain
 html, body {
 	height: 100%;
 	background: #111;
+}
+
+body {
+	overflow-x: hidden; // For IE
 }
 
 #jsConsole, #paneWarning {
@@ -179,12 +183,15 @@ a, input, label, button,
 #panelLeft, #panelRight {
 	background: #111;
 }
+#panelLeft {
+	background: linear-gradient(to right, #000 0%, #111 100%);
+}
 
 /* @@Map
 ----------------------------------------------------------------------------- */
 #paneMap {
 	height: 100%;
-	min-height: 720px;
+	min-height: 580px;
 	background: url("img/background/space.jpg") repeat center;
 }
 
@@ -209,12 +216,24 @@ input#mapCoordinatesRegion {
 	width: 120px; 
 }
 
-#itemMapButtons {
+#itemMapLinksNorth {
+	position: absolute;
+	top: 4px; right: 12px;
+	z-index: 9;
+}
+#itemMapLinksSouth {
 	position: absolute;
 	bottom: 4px; right: 12px;
 	z-index: 9;
 }
-#itemMapButtons a { /* Website name */
+#itemLogo {
+	margin-right: 2px;
+}
+.itemMapLinks img {
+	width: 32px; height: 32px;
+	vertical-align: middle;
+}
+.itemMapLinks a { /* Website name */
 	vertical-align: middle;
 	font-family: Menomonia;
 	font-size: 18px;
@@ -222,8 +241,9 @@ input#mapCoordinatesRegion {
 	color: #ffeebb;
 	opacity: 0.6;
 }
-#itemMapButtons a:hover {
+.itemMapLinks a:hover {
 	color: #ddff77;
+	opacity: 0.9;
 }
 a#linkModeSimple {
 	text-decoration: underline;
@@ -654,7 +674,6 @@ header.jsSection sup {
 	position: absolute;
 	bottom: 0px;
 	width: 360px; height: auto;
-	min-height: 312px;
 	top: 408px;
 	color: #eee;
 	text-shadow: 0px 0px 2px black;
@@ -762,7 +781,7 @@ header.cntHeader {
 	color: #e4e0b3;
 }
 .cntComposition a:active {
-	color: #fff;
+	color: white;
 }
 
 .cntComposition i {
@@ -1091,7 +1110,8 @@ header.cntHeader {
 	content: "*";
 }
 
-.chnTimeCurrent:hover, .chnTimeFuture:hover, .chnTimeFutureFar:hover {
+.chnTimeCurrent:hover, .chnTimeFuture:hover, .chnTimeFutureFar:hover,
+.chnDetailsLinks ins:hover {
 	color: white;
 }
 
