--- a/gw2t.css
+++ b/gw2t.css
@@ -49,7 +49,7 @@ body > windowMain
 
 html, body {
 	height: 100%;
-	background: url("img/background/space.jpg") repeat center;
+	background: black;
 }
 
 body {
