Few more chests

--- a/gw2t.css
+++ b/gw2t.css
@@ -1,4 +1,4 @@
-map/*
+/*
 	Design: "Synchronicity" with Guild Wars 2 assets and motifs.
 	Website: GW2Timer world boss timer and map guide.
 	Measurements: minimum window size is 360x580, which is only enough for the
@@ -29,7 +29,6 @@ map/*
 	O - Options layer
 	U - Utility styles
 	P - Color palette
-
 */
 
 /* Reset styles
